# awd-iot-poc

./: .gitignore  README.md  package.json
cdk/: .prettierignore  cdk.json  eslint.config.mjs  package.json  tsconfig.json
cdk/lib/: index.ts
cdk/lib/compute-stacks/: index.ts  iot-compute-stack.ts  iot-compute.stack.ts  iot-core-stack.ts
cdk/lib/compute-stacks/base/: index.ts  python-bundling.ts
cdk/lib/data-stacks/: dynamo-db-stack.ts  index.ts
src/: app.py  db.py  publish-iot-message.py  pyproject.toml  register_device.py  start.sh  test-encoding-size.py
src/infra/api/lambda/: process-iot-message.py
