[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["phtre57 <phtre57@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.37.29"
requests = "^2.32.3"
chalice = "^1.31.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
